--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,25 @@ models/
 config\.py
 
 submission\.csv
+
+path_to_saved_model/variables/checkpoint
+
+path_to_saved_model/variables/variables.data-00000-of-00002
+
+path_to_saved_model/variables/variables.data-00001-of-00002
+
+path_to_saved_model/variables/variables.index
+
+venv/bin/activate
+
+venv/bin/activate.csh
+
+venv/bin/activate.fish
+
+venv/bin/python
+
+venv/bin/python3
+
+venv/bin/python3.7
+
+venv/pyvenv.cfg
